Mejoras esteticas cómo accesos directos en la izquierda y se borró el botón exportar PDF de Expediente

--- a/Sistema de Seguimiento de Solicitudes/Layout/NavMenu.razor
+++ b/Sistema de Seguimiento de Solicitudes/Layout/NavMenu.razor
@@ -67,6 +67,37 @@
                 </NavLink>
             </li>
         }
+        @* ============================================================
+   MÓDULO RECURSOS DE REVISIÓN - accesos directos
+   ============================================================ *@
+        <div class="nav-group px-3 mt-3">
+            <h6 class="text-white fw-bold">Recursos de Revisión</h6>
+
+            <div class="nav-item px-2">
+                <NavLink class="nav-link" href="/menu/recursos-revision/registro/agregar">
+                    ➤ Agregar Recurso
+                </NavLink>
+            </div>
+
+            <div class="nav-item px-2">
+                <NavLink class="nav-link" href="/menu/recursos-revision/registro/expediente">
+                    ➤ Expediente
+                </NavLink>
+            </div>
+
+            <div class="nav-item px-2">
+                <NavLink class="nav-link" href="/menu/recursos-revision/busqueda">
+                    ➤ Buscar Recursos
+                </NavLink>
+            </div>
+
+            <div class="nav-item px-2">
+                <NavLink class="nav-link" href="/menu/recursos-revision/estadisticas">
+                    ➤ Datos Estadísticos
+                </NavLink>
+            </div>
+        </div>
+
 
         @* Aquí agregarás los demás módulos después *@
 
